<resources>
    <string name="app_name">Foodie</string>
    <string name="e_mail">"   E-mail"</string>
    <string name="log_in">LOG IN</string>
    <string name="register_here">"   Register here"</string>
    <string name="password">"   Password"</string>
    <string name="mobile_number_10_digits">"   Mobile Number (10-digits)"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">"   Name"</string>
    <string name="sharedPreferences">Foodie</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OTP_main">Enter the recieved OTP below</string>
    <string name="submit">Submit</string>
</resources>
